--- a/01.02-A-More-Involved-Example.ipynb
+++ b/01.02-A-More-Involved-Example.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 213,
    "id": "6d950dbf-dd9a-4735-b98e-d8fa161bdecb",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 214,
    "id": "f609fec2-3c53-49d4-8cc7-86b8fa00166f",
    "metadata": {},
    "outputs": [],
@@ -558,6 +558,9 @@
     "\t\tself.name = name\n",
     "\t\tself.columns = {col.name: col for col in columns}\n",
     "\t\tself.data = []\n",
+    "\n",
+    "\tdef table_scan(self):\n",
+    "\t\treturn self.data\n",
     "\n",
     "\tdef insert(self, row):\n",
     "\t\tif set(row.keys()) != set(self.columns.keys()):\n",
@@ -582,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 215,
    "id": "8c934b64-4208-4cc9-a55b-702279ee4e48",
    "metadata": {},
    "outputs": [],
@@ -603,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 216,
    "id": "cb867fdb-e283-4973-9e32-5d39c351d943",
    "metadata": {},
    "outputs": [],
@@ -636,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 217,
    "id": "a08c8899-4b11-450d-a0a4-4ebbd76a1d25",
    "metadata": {},
    "outputs": [
@@ -658,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 218,
    "id": "c019ed3a-49b1-41bc-b746-365cae5b7ab0",
    "metadata": {},
    "outputs": [
@@ -682,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 219,
    "id": "836bf743-ce73-435c-bcef-ccc67d4a20c8",
    "metadata": {},
    "outputs": [
@@ -701,7 +704,7 @@
        " {'title': 'GoldenEye (1995)'}]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 220,
    "id": "f1158793-d2c6-4351-82ef-b115b895cfba",
    "metadata": {},
    "outputs": [],
@@ -740,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 221,
    "id": "3fca5097-94ab-42de-ab3f-344af6d0d25e",
    "metadata": {},
    "outputs": [],
@@ -775,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 248,
    "id": "5567682d-9f45-4119-a7be-cf022c399bcc",
    "metadata": {},
    "outputs": [],
@@ -787,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 249,
    "id": "dc455164-8968-4e36-b272-0d2f5b80f406",
    "metadata": {},
    "outputs": [
@@ -813,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 224,
    "id": "641a339b-c6a3-4a8d-a282-50c55a62efa4",
    "metadata": {},
    "outputs": [],
@@ -849,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 225,
    "id": "fad979f9-efc8-456d-95bb-3e0d0b260388",
    "metadata": {},
    "outputs": [],
@@ -861,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 226,
    "id": "90c4a688-b249-4cb6-93e4-9c459a6c4737",
    "metadata": {},
    "outputs": [
@@ -895,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 227,
    "id": "5a4156fd-40c7-4500-853c-41fa7d120609",
    "metadata": {},
    "outputs": [],
@@ -915,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 228,
    "id": "2e6a3dea-a426-431a-8d44-02a43ac35100",
    "metadata": {},
    "outputs": [],
@@ -929,7 +932,8 @@
     "\t\t# self.condition = condition\n",
     "\n",
     "\tdef execute(self):\n",
-    "\t\ttable_scan = (row for row in self.table)\n",
+    "\t\t# table_scan = (row for row in self.table)\n",
+    "\t\ttable_scan = self.table.table_scan()\n",
     "\t\tself.rows_processed = len(table_scan)\n",
     "\t\treturn table_scan\n",
     "\n",
@@ -939,27 +943,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 233,
    "id": "537a7dfd-0e40-4b8e-ac9e-5c78d50fd038",
    "metadata": {},
    "outputs": [],
    "source": [
     "class SelectOperator(BaseOperator):\n",
-    "    def __init__(self, input_operator, select_columns):\n",
-    "        super().__init__()\n",
-    "        self.input_operator = input_operator\n",
-    "        self.select_columns = select_columns\n",
+    "\tdef __init__(self, input_operator, select_columns):\n",
+    "\t\tsuper().__init__()\n",
+    "\t\tself.input_operator = input_operator\n",
+    "\t\tself.select_columns = select_columns\n",
+    "\t\tself.result_limit = 25\n",
     "\n",
-    "    def execute(self):\n",
-    "        result = []\n",
-    "        for row in self.input_operator.execute():\n",
-    "            self.rows_processed += 1\n",
-    "            selected_row = {col: row[col] for col in self.select_columns}\n",
-    "            result.append(selected_row)\n",
-    "        return result\n",
+    "\tdef execute(self):\n",
+    "\t\tresult = []\n",
+    "\t\tfor row in self.input_operator.execute():\n",
+    "\t\t\tself.rows_processed += 1\n",
+    "\t\t\tif self.rows_processed <= self.result_limit:\n",
+    "\t\t\t\tselected_row = {col: row[col] for col in self.select_columns}\n",
+    "\t\t\t\tresult.append(selected_row)\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tbreak\n",
+    "\t\treturn result\n",
     "\n",
-    "    def get_cost(self):\n",
-    "        return super().get_cost()\n"
+    "\tdef get_cost(self):\n",
+    "\t\treturn super().get_cost()"
    ]
   },
   {
@@ -972,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 234,
    "id": "982bc3f6-a780-401b-bc2f-f9d2399f84e9",
    "metadata": {},
    "outputs": [],
@@ -1015,25 +1023,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 244,
    "id": "b040b72b-1310-4429-8746-c1b27e85071e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def execute_query(executable_plan):\n",
-    "    \"\"\"\n",
-    "    Execute the query by running each operation in the executable plan.\n",
-    "    \"\"\"\n",
-    "    for operator in executable_plan:\n",
-    "        result = operator.execute()\n",
+    "\t\"\"\"\n",
+    "\tExecute the query by running each operation in the executable plan.\n",
+    "\t\"\"\"\n",
+    "\tfor operator in executable_plan:\n",
+    "\t\tcost = {}\n",
+    "\t\tresult = operator.execute()\n",
+    "\t\tcost[str(operator)] = operator.get_cost()\n",
     "\n",
-    "    # The result of the last operation is the result of the entire query\n",
-    "    return result\n"
+    "\t# The result of the last operation is the result of the entire query\n",
+    "\treturn result, cost\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 247,
    "id": "196bfdcb-1def-45cc-8489-ef6e2afbc71a",
    "metadata": {},
    "outputs": [
@@ -1041,34 +1051,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "add  title  to list of columns\n",
       "add  genres  to list of columns\n",
-      "Parse: parse: columns =  ['title', 'genres']\n",
+      "Parse: parse: columns =  ['genres']\n",
       "Parse: parse: table_name =  movies\n",
       "Parse:parse: where_clause =  None\n",
       "SelectStatement: this Select Statement has \n",
-      "Columns:  ['title', 'genres'] \n",
+      "Columns:  ['genres'] \n",
       "Table:  movies \n",
-      "WHERE CLAUSE:  None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'Table' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[206], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m executable_plan \u001b[38;5;241m=\u001b[39m create_executable_plan(optimized_plan, db)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Executing the query\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m query_result \u001b[38;5;241m=\u001b[39m execute_query(executable_plan)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Output the result\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(query_result)\n",
-      "Cell \u001b[1;32mIn[205], line 6\u001b[0m, in \u001b[0;36mexecute_query\u001b[1;34m(executable_plan)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mExecute the query by running each operation in the executable plan.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m operator \u001b[38;5;129;01min\u001b[39;00m executable_plan:\n\u001b[1;32m----> 6\u001b[0m     result \u001b[38;5;241m=\u001b[39m operator\u001b[38;5;241m.\u001b[39mexecute()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# The result of the last operation is the result of the entire query\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "Cell \u001b[1;32mIn[202], line 10\u001b[0m, in \u001b[0;36mTableScanOperator.execute\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexecute\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 10\u001b[0m \ttable_scan \u001b[38;5;241m=\u001b[39m (row \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtable)\n\u001b[0;32m     11\u001b[0m \t\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrows_processed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(table_scan)\n\u001b[0;32m     12\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m table_scan\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Table' object is not iterable"
+      "WHERE CLAUSE:  None\n",
+      "{'<__main__.TableScanOperator object at 0x000001B291BE9670>': {'rows_processed': 9742}}\n"
      ]
     }
    ],
    "source": [
     "# Example query\n",
-    "sql_query = \"SELECT title, genres FROM movies WHERE genres = 'Comedy'\"\n",
+    "sql_query = \"SELECT genres FROM movies WHERE genres = 'Comedy'\"\n",
     "\n",
     "# Parsing the query to AST\n",
     "tokens = tokenize(sql_query)\n",
@@ -1087,10 +1084,10 @@
     "executable_plan = create_executable_plan(optimized_plan, db)\n",
     "\n",
     "# Executing the query\n",
-    "query_result = execute_query(executable_plan)\n",
+    "query_result, query_costs = execute_query(executable_plan)\n",
     "\n",
     "# Output the result\n",
-    "print(query_result)\n"
+    "print(query_costs)\n"
    ]
   },
   {
