--- a/01.02-A-More-Involved-Example.ipynb
+++ b/01.02-A-More-Involved-Example.ipynb
@@ -180,15 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "id": "8c934b64-4208-4cc9-a55b-702279ee4e48",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert the string value from CSV to the specified data type.\n",
     "def convert_type(value, col_type):\n",
-    "    \"\"\"\n",
-    "    Convert the string value from CSV to the specified data type.\n",
-    "    \"\"\"\n",
     "    if col_type == int:\n",
     "        return int(value)\n",
     "    elif col_type == float:\n",
@@ -369,6 +367,14 @@
    "source": [
     "# ratings found in the file\n",
     "db_movies.get_table('ratings').select(['movieId', 'rating'], limit = 15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6aeb83-cfe2-44ca-8ef4-c8a4d62e950b",
+   "metadata": {},
+   "source": [
+    "That ```get_table()``` will be a ```TableScanOperator``` later. "
    ]
   },
   {
